kub/k8s_play/basics/deployment-pt2.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      deployment.kuberentes.io/revision: "1"
    creationTimestamp: 2020-03-04
    generation: 1
    labels:
      app: nginx
    name: nginx
    namespace: kube-prac
    resourceVersion: "1672574"
    selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/nginx
    #uid:
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: nginx
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata: 
        labels:
          app: nginx
      spec: 
        containers:
        - image: nginx 
          imagePullPolicy: Always
          name: nginx
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 45
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
