kub/k8s_play/basics/exec-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kube-prac
  labels: 
    test: liveness
  name: liveness-exec
spec:
  containers:
  - name: liveness
    image: busybox
    args: 
    - /bin/sh
    - -c
    - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
    livenessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 5
      periodSeconds: 5
