kub/k8s_play/basics/http-live.yaml
apiVersion: v1
kind: Pod
metadata: 
  labels:
    test: liveness
  name: liveness-http
  namespace: kube-prac
spec:
  containers:
  - name: liveness
    image: k8s.gcr.io/liveness
    args:
    - /server
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
        httpHeaders:
        - name: Custom-Header
          value: Your-Mom
      initialDelaySeconds: 3
      periodSeconds: 3
