kub/k8s_play/basics/pod3-base.yaml
apiVersion: v1
kind: Pod
metadata:
  name: annotation-second-scheduler
  namespace: kube-prac
  labels:
    name: multischeduler-example
spec:
  schedulerName: my-scheduler
  containers:
  - name: pod-with-second-annotation-container
    image: k8s.gcr.io/pause:2.0
# the scheduler i created is specified
